--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ lab
 lab.c
 output
 head.h
+copilot-version/decodifica.exe
+copilot-version/chave_decodificacao.bin
+copilot-version/codifica.exe
+copilot-version/arquivo_codificado.txt
