kkk tenho que aprender a dar nome para os commits

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ copilot-version/decodifica.exe
 copilot-version/chave_decodificacao.bin
 copilot-version/codifica.exe
 copilot-version/arquivo_codificado.txt
+huffman-taveira-assis.zip
