--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ huffman-taveira-assis.zip
 huffman-taveira-assis/chave_decodificacao.bin
 huffman-taveira-assis/arquivo_codificado.txt
 huffman-taveira-assis/codifica.exe
+huffman-taveira-assis/arquivos_gerados/arquivo_codificado.txt
+huffman-taveira-assis/arquivos_gerados/chave_decodificacao.bin
